--- a/schedule.html
+++ b/schedule.html
@@ -6,6 +6,7 @@
     <title>Life Coach by Korinne</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/plant.png">
 </head>
 <body>
     <script>
@@ -29,6 +30,6 @@
         </ul>
     </nav>
     <div class = "calendar">
-        <iframe src="https://calendar.google.com/calendar/u/0/selfsched?sstoken=UUpXQ1hvZ1EwV3gtfGRlZmF1bHR8ZTdkODBmMzRjM2I5MjY2M2M1MzJlZGFjMTExYTk4MDc" style="border: 0" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://calendar.google.com/calendar/u/0/selfsched?sstoken=UUpXQ1hvZ1EwV3gtfGRlZmF1bHR8ZTdkODBmMzRjM2I5MjY2M2M1MzJlZGFjMTExYTk4MDc" role = "none" title = "calendar" style="border: 0" frameborder="0" scrolling="no"></iframe>
     </div>
 </body>
