--- a/onboard.html
+++ b/onboard.html
@@ -6,6 +6,7 @@
     <title>Life Coach by Korinne</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/plant.png">
 </head>
 <body>
     <div class = "mainbttn"><a href = "index.html" id = "jump1">Skip to Main Content</a></div>
